--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <!-- /main -->
 
       <!-- footer -->
-      <footer
+      <footer>
         <h4 class="white gmail">GMail</h4>
         <span class="powered">powered by Daniel</span>
       </footer>
