closing tag added on footer (Bonus folder)

--- a/Bonus/index.html
+++ b/Bonus/index.html
@@ -52,7 +52,7 @@
       <!-- /main -->
 
       <!-- footer -->
-      <footer
+      <footer>
         <h4 class="white gmail">GMail</h4>
         <span class="powered">powered by Daniel</span>
       </footer>
