--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       <!-- /main -->
 
       <!-- footer -->
-      <footer>
-        <h4 class="white gmail">GMail</h4>
+      <footer class="white">
+        <h4 class="gmail">GMail</h4>
         <span class="powered">powered by Daniel</span>
       </footer>
       <!-- /footer -->
